syntax = "proto3";

package pb;

option java_package = "com.im.tutorial";

service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string node_name = 1;
    string ip = 2;
    string name = 3;
}

// The response message containing the greetings
message HelloReply {
    string node_name = 1;
    string ip = 2;
    string message = 3;

}
